2007-09-10	Alain Schaefer <alani@easc.ch>

	* preinstall.am, startup/bspstart.c, startup/linkcmds: Complete earlier
	patch.
	* include/cplb.h: New file.

2007-09-10	Alain Schaefer <alani@easc.ch>

	* startup/bspstart.c: Add a useful routine to program memory protection
	in bfin. It is not used but a user of ezKit533 can customize its bsp
	and use this function.

2007-05-24	Alain Schaefer <alani@easc.ch>

	* startup/bspstart.c: Fix a problem in the InitEBIU method.

2007-04-17	Joel Sherrill <joel@OARcorp.com>

	* include/bsp.h, startup/bspstart.c: Fix compile errors and address
	most warnings about constants being too large.

2007-04-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bsp_specs: Remove qrtems_debug.

2007-03-11	Joel Sherrill <joel@OARcorp.com>

	* startup/bspstart.c: Remove assignments of
	Cpu_table.do_zero_of_workspace to TRUE since TRUE is the default
	value in boot_card.c

2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-11-20  Ralf Corsépius <ralf.corsepius@rtems.org>

	* include/coverhd.h: Remove (Use shared default template instead).

2006-11-15	Joel Sherrill <joel@OARcorp.com>

	* Makefile.am: Merge c_rtems_main() into boot_card(). This eliminated a
	file and simplified initialization.

2006-11-11  Ralf Corsépius <ralf.corsepius@rtems.org>

	* startup/linkcmds: Use___start_set_sysctl_set, ___stop_set_sysctl_set
	instead of __start_set_sysctl_set, __stop_set_sysctl_set
	(bfin uses '_' prefixed c-symbols.)

2006-11-10  Alain Schaefer <alani@easc.ch>

	* startup/linkcmds: Put .fini into sdram.
	Add __edata, __etext.

2006-10-26	Joel Sherrill <joel@OARcorp.com>

	* configure, include/bspopts.h.in: Removed.

2006-10-24	Joel Sherrill <joel@OARcorp.com>

	* include/bsp.h: Eliminate hi, lo, HI, LO, and MK_BMSK.

2006-06-05  Alain Schaefer <alani@easc.ch>

    * all files : Initial copy and port from no_cpu 