@@ -1,3 +1,8 @@
+2007-09-20	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* preinstall.am: Add cplb.h.
+	* startup/bspstart.c: Add cast of constant.
+
 2007-09-10	Alain Schaefer <alani@easc.ch>
 
 	* preinstall.am, startup/bspstart.c, startup/linkcmds: Complete earlier
